--- a/.github/workflows/deployMgmtGroups.yml
+++ b/.github/workflows/deployMgmtGroups.yml
@@ -3,16 +3,9 @@ name: ALZ GitHub Actions deployment pipeline
 on: [workflow_dispatch]
 
 env:
-  ManagementGroupPrefix: "alz"
-  TopLevelManagementGroupDisplayName: "Azure Landing Zones"
-  Location: "eastus"
-  LoggingSubId: "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-  LoggingResourceGroupName: "alz-logging"
-  HubNetworkSubId: "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-  HubNetworkResourceGroupName: "Hub_Networking_POC"
-  RoleAssignmentManagementGroupId: "alz-platform"
-  SpokeNetworkSubId: "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-  SpokeNetworkResourceGroupName: "Spoke_Networking_POC"
+  ManagementGroupPrefix: "n4dt"
+  TopLevelManagementGroupDisplayName: "Node4 Digital Test"
+  Location: "uksouth"
   runNumber: ${{ github.run_number }}
 
 jobs:
