--- a/.github/workflows/deployCustomPolicyDefinitions.yml
+++ b/.github/workflows/deployCustomPolicyDefinitions.yml
@@ -1,4 +1,4 @@
-name: ALZ GitHub Actions deployment pipeline - Custom Policy Definitions
+name: Deploy Custom Policy Definitions
 
 on: [workflow_dispatch]
 
